[gd_scene load_steps=9 format=3 uid="uid://ci52bv1m15cbs"]

[ext_resource type="Script" uid="uid://bc7qu102yy01n" path="res://Player/base_car.gd" id="1_3nttl"]
[ext_resource type="Resource" uid="uid://cgsjxr7u1i3ja" path="res://resources/cars/dodge_stats.tres" id="2_bxyty"]
[ext_resource type="PackedScene" uid="uid://benmjny2guowm" path="res://assets/cars/dodge/Wheel.glb" id="2_eoiid"]
[ext_resource type="PackedScene" uid="uid://bty2rpvw2dh0h" path="res://assets/cars/dodge/doge-body.glb" id="3_om8jj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mm2gk"]
size = Vector3(1.9717, 1, 2.08592)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_n7qdn"]
radius = 0.291194

[sub_resource type="BoxShape3D" id="BoxShape3D_xaafv"]
size = Vector3(0.542114, 1.7092, 1.53265)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7kmqy"]
radius = 0.363529

[node name="Dodge" type="VehicleBody3D"]
collision_layer = 2
mass = 80.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.1, -0.05)
constant_force = Vector3(0, -600, 0)
script = ExtResource("1_3nttl")
car_resource = ExtResource("2_bxyty")

[node name="wheel_0" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.997421, 0.340338, -1.50006)
use_as_steering = true
wheel_friction_slip = 3.1
suspension_travel = 0.357
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel" parent="wheel_0" instance=ExtResource("2_eoiid")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.142656, 0, 0)

[node name="wheel_1" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02668, 0.340338, -1.50006)
use_as_steering = true
wheel_friction_slip = 3.1
suspension_travel = 0.357
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel" parent="wheel_1" instance=ExtResource("2_eoiid")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0775136, 0, 0)

[node name="wheel_2" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.997421, 0.286814, 1.26411)
use_as_traction = true
wheel_friction_slip = 3.0
suspension_travel = 0.357
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel" parent="wheel_2" instance=ExtResource("2_eoiid")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.142656, 0, 0)

[node name="wheel_3" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02668, 0.286814, 1.26411)
use_as_traction = true
wheel_friction_slip = 3.0
suspension_travel = 0.357
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel" parent="wheel_3" instance=ExtResource("2_eoiid")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0775136, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0026385, 0.827398, 0.719927)
shape = SubResource("BoxShape3D_mm2gk")

[node name="look" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2149, 0)

[node name="CarModel" parent="." instance=ExtResource("3_om8jj")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="FrontLight" type="SpotLight3D" parent="CarModel"]
transform = Transform3D(-0.986887, 0, -0.161414, 0, 1, 0, 0.161414, 0, -0.986887, 0.666818, 0.66797, 2.51235)
light_energy = 10.0
shadow_enabled = true
spot_range = 12.649
spot_angle = 17.48

[node name="FrontLight2" type="SpotLight3D" parent="CarModel"]
transform = Transform3D(-0.98458, 0, 0.174937, 0, 1, 0, -0.174937, 0, -0.98458, -0.620907, 0.778858, 2.42366)
light_energy = 10.0
shadow_enabled = true
spot_range = 12.649
spot_angle = 17.48

[node name="BackLight" type="OmniLight3D" parent="CarModel"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.452848, 0.774431, -2.49144)
visible = false
light_color = Color(1, 0, 0, 1)
light_energy = 3.0
omni_range = 0.414
omni_shadow_mode = 0

[node name="BackLight2" type="OmniLight3D" parent="CarModel"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.519611, 0.774431, -2.49144)
visible = false
light_color = Color(1, 0, 0, 1)
light_energy = 3.0
omni_range = 0.414
omni_shadow_mode = 0

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.590649, -2.08042)
shape = SubResource("CapsuleShape3D_n7qdn")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.000778168, 0.603737, -1.11035)
shape = SubResource("BoxShape3D_xaafv")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.000778168, 0.653567, 1.99781)
shape = SubResource("CapsuleShape3D_7kmqy")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.67351, 0)
pixel_size = 0.025
billboard = 2

[editable path="CarModel"]
